Checkpoint before switching away from dask arrays.

--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190325 Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190325 Segmentation.ipynb
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.scale(20)"
+    "cluster.scale(5)"
    ]
   },
   {
@@ -238,19 +238,22 @@
    "outputs": [],
    "source": [
     "data_futures = {}\n",
-    "for photobleaching_filename in fluorescence_filenames[:]:\n",
+    "for photobleaching_filename in fluorescence_filenames[:1]:\n",
     "    data_futures[photobleaching_filename] = process_file(\n",
     "        funcs,\n",
     "        photobleaching_filename,\n",
+    "        time_slice=slice(990, None),\n",
+    "        position_slice=slice(2, 3),\n",
+    "        dark_frame=dark_frame,\n",
     "    )\n",
     "\n",
-    "for photobleaching_filename in phase_filenames[:]:\n",
+    "for photobleaching_filename in phase_filenames[:0]:\n",
     "    segmentation_filename = photobleaching_filename.replace(\"_0001.nd2\", \".nd2\")\n",
     "    data_futures[segmentation_filename] = process_file(\n",
     "        funcs, photobleaching_filename, segmentation_filename=segmentation_filename\n",
     "    )\n",
     "\n",
-    "for initial_filename in sandwich_filenames[:]:\n",
+    "for initial_filename in sandwich_filenames[:0]:\n",
     "    segmentation_filename = initial_filename.replace(\"_0001.nd2\", \".nd2\")\n",
     "    photobleaching_filename = initial_filename.replace(\"_0001.nd2\", \"_0002.nd2\")\n",
     "    final_filename = initial_filename.replace(\"_0001.nd2\", \"_0003.nd2\")\n",
@@ -269,7 +272,100 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data = client.compute(data_futures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = nd2_to_dask(fluorescence_filenames[0], 2, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b[999].compute(scheduler=\"synchronous\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = trim_zeros(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c[-1].compute(scheduler=\"synchronous\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b[999].compute"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_nd2_frame(fluorescence_filenames[0], v, 0, 999)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = 2\n",
+    "plt.imshow(get_nd2_frame(fluorescence_filenames[0], v, 0, 998))\n",
+    "plt.figure()\n",
+    "plt.imshow(get_nd2_frame(fluorescence_filenames[0], v, 0, 999))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "da.from_delayed()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "a = client.compute(data_futures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del a"
    ]
   },
   {
