--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190326 Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190326 Segmentation.ipynb
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.scale(20)"
+    "cluster.scale(5)"
    ]
   },
   {
@@ -160,10 +160,9 @@
    "outputs": [],
    "source": [
     "dark_frames = nd2_to_dask(\n",
-    "    os.path.join(base_filename, \"calibration/dark_100ms.nd2\"), 0, \"Dark\"\n",
+    "    os.path.join(base_filename, \"calibration/dark_100ms.nd2\"), 0, 0\n",
     ")\n",
-    "dark_frame = dark_frames.mean(axis=0)\n",
-    "# dark_std = dark_frames.std(axis=0)"
+    "dark_frame = dark_frames.mean(axis=0)"
    ]
   },
   {
@@ -172,7 +171,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = client.compute(dark_frame)"
+    "flat_fields = {}\n",
+    "for filename in glob(os.path.join(base_filename, \"calibration/*flat*100ms*.nd2\")):\n",
+    "    channel = get_nd2_reader(filename).metadata[\"channels\"][0]\n",
+    "    flat_field = nd2_to_dask(filename, 0, 0).mean(axis=0)\n",
+    "    flat_fields[channel] = flat_field"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing"
    ]
   },
   {
@@ -181,7 +191,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "del a"
+    "def foo(x):\n",
+    "    return x.mean()\n",
+    "\n",
+    "\n",
+    "_foo = delayed(foo)"
    ]
   },
   {
@@ -190,7 +204,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.restart()"
+    "@da.as_gufunc(signature=\"(i,j)->()\", output_dtypes=float, vectorize=True)\n",
+    "def gufoo(x):\n",
+    "    return np.mean(x, axis=(-2, -1))"
    ]
   },
   {
@@ -199,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.persist?"
+    "gufoo(dark_frames[:10])  # .compute()"
    ]
   },
   {
@@ -208,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a"
+    "z = gufoo(dark_frames)"
    ]
   },
   {
@@ -217,9 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# gfp_flat = nd2_to_dask('/n/scratch2/jqs1/fidelity/190313/calibration/190313_flatfield_FITC_cfpslide_100ms_20pct.nd2').median(axis=0)\n",
-    "# mcherry_flat = nd2_to_dask('/n/scratch2/jqs1/fidelity/190313/calibration/190313_flatfield_mcherry_gfpslide_100ms_000.nd2').median(axis=0)\n",
-    "# mcherry_flat_lowpower = nd2_to_dask('/n/scratch2/jqs1/fidelity/190313/calibration/190313_flatfield_mcherry_30ms_0.35pct_laser.nd2').median(axis=0)"
+    "z[-1].compute()"
    ]
   },
   {
@@ -228,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flats = {\"FITC\": fitc_flat, \"MCHERRY\": mcherry_flat}"
+    "dark_frames.to_delayed()[:, 0, 0]"
    ]
   },
   {
@@ -237,29 +251,232 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_futures = {}\n",
-    "for photobleaching_filename in fluorescence_filenames[:]:\n",
-    "    data_futures[photobleaching_filename] = process_file(\n",
+    "a = [client.submit(_foo, y) for x in range(len(dark_frames))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = client.compute(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dask.bag as db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dark_frames.to_delayed()[0, 0, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = db.from_delayed([dark_frames.to_delayed()[0, 0, 0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dask.bag.from_delayed(dark_frames.to_delayed())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = [0 for a in range(len(dark_frames))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test2 = [0 for a in dark_frames]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iter(dark_frames)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Old"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dark_frames.to_delayed??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dark_frames[0].to_delayed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = dark_frames.to_delayed()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "funcy = lambda x: x + 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dask.optimization.cull?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dark_frames.map_blocks(funcy, dtype=dark_frames.dtype)[0].visualize(format=\"svg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dark_frames.map_blocks(funcy, dtype=dark_frames.dtype)[0].compute(\n",
+    "    scheduler=\"synchronous\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dark_frames.map_blocks?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext line_profiler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_graph = {}\n",
+    "for photobleaching_filename in fluorescence_filenames[:1]:\n",
+    "    data_graph[photobleaching_filename] = process_file(\n",
+    "        funcs, photobleaching_filename\n",
+    "    )  # ,\n",
+    "#                                                        dark_frame=dark_frame,\n",
+    "#                                                        flat_fields=flat_fields)\n",
+    "\n",
+    "for photobleaching_filename in phase_filenames[:0]:\n",
+    "    segmentation_filename = photobleaching_filename.replace(\"_0001.nd2\", \".nd2\")\n",
+    "    data_graph[segmentation_filename] = process_file(\n",
     "        funcs,\n",
     "        photobleaching_filename,\n",
+    "        segmentation_filename=segmentation_filename,\n",
+    "        dark_frame=dark_frame,\n",
+    "        flat_fields=flat_fields,\n",
     "    )\n",
     "\n",
-    "for photobleaching_filename in phase_filenames[:]:\n",
-    "    segmentation_filename = photobleaching_filename.replace(\"_0001.nd2\", \".nd2\")\n",
-    "    data_futures[segmentation_filename] = process_file(\n",
-    "        funcs, photobleaching_filename, segmentation_filename=segmentation_filename\n",
-    "    )\n",
-    "\n",
-    "for initial_filename in sandwich_filenames[:]:\n",
+    "for initial_filename in sandwich_filenames[:0]:\n",
     "    segmentation_filename = initial_filename.replace(\"_0001.nd2\", \".nd2\")\n",
     "    photobleaching_filename = initial_filename.replace(\"_0001.nd2\", \"_0002.nd2\")\n",
     "    final_filename = initial_filename.replace(\"_0001.nd2\", \"_0003.nd2\")\n",
-    "    data_futures[segmentation_filename] = process_file(\n",
+    "    data_graph[segmentation_filename] = process_file(\n",
     "        funcs,\n",
     "        photobleaching_filename,\n",
     "        segmentation_filename=segmentation_filename,\n",
     "        initial_filename=initial_filename,\n",
     "        final_filename=final_filename,\n",
+    "        dark_frame=dark_frame,\n",
+    "        flat_fields=flat_fields,\n",
     "    )"
    ]
   },
@@ -269,47 +486,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = client.compute(data_futures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.gather(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_futures[\n",
-    "    \"/n/scratch2/jqs1/fidelity/190313/fluorescence/190313_mkate_100ms_50pct_laser.nd2\"\n",
-    "][0][\"regionprops\"].compute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_futures[\n",
-    "    \"/n/scratch2/jqs1/fidelity/190313/fluorescence/190313_mkate_100ms_50pct_laser.nd2\"\n",
-    "][0][\"segmentation_frame\"].compute()"
+    "data_futures = client.compute(data_graph)"
    ]
   },
   {
