--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190305 Analysis NAO.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190305 Analysis NAO.ipynb
@@ -37,8 +37,9 @@
    "outputs": [],
    "source": [
     "# with open('190311photobleaching.pickle', 'rb') as f:\n",
-    "with open(\"all_data.pickle\", \"rb\") as f:\n",
-    "\n",
+    "# with open('all_data.pickle', 'rb') as f:\n",
+    "with open(\"190313photobleaching_noflatcorr.pickle\", \"rb\") as f:\n",
+    "    # with open('190326photobleaching_flatcorr_fluoronly.pickle', 'rb') as f:\n",
     "    d = pickle.load(f)"
    ]
   },
@@ -58,8 +59,8 @@
    "outputs": [],
    "source": [
     "measurements, regionprops, labels, img = d[\n",
-    "    \"/n/scratch2/jqs1/fidelity/190311/190311_mGFPmut2_100ms_laser100pct_006.nd2\"\n",
-    "]"
+    "    \"/n/scratch2/jqs1/fidelity/190313/fluorescence/190313_mkate_100ms_50pct_laser.nd2\"\n",
+    "][0]"
    ]
   },
   {
@@ -110,13 +111,15 @@
     "traces = []\n",
     "rp_list = []\n",
     "rp_df = pd.DataFrame()\n",
-    "for i in range(7):\n",
+    "directory = (\n",
+    "    \"/n/scratch2/jqs1/fidelity/190313/fluorescence/190313_mkate_100ms_100pct_laser.nd2\"\n",
+    ")\n",
+    "for i in [3, 5, 7, 8]:\n",
     "    print(i)\n",
-    "    measurements, regionprops, labels, img = d[\n",
-    "        \"/n/scratch2/jqs1/fidelity/190301/jqs_photobleach_100ms_de32_mkate2_000{:d}.nd2\".format(\n",
-    "            i\n",
-    "        )\n",
-    "    ]\n",
+    "    #     measurements, regionprops, labels, img = d['/n/scratch2/jqs1/fidelity/190301/jqs_photobleach_100ms_de32_mkate2_000{:d}.nd2'.format(i)]\n",
+    "    regionprops = d[directory][i][\"regionprops\"]\n",
+    "    measurements = d[directory][i][\"traces\"]\n",
+    "\n",
     "    traces.append(measurements[\"mean\"][1:])\n",
     "    rp_list.append(regionprops)\n",
     "    print(measurements[\"mean\"][1:].shape)\n",
@@ -126,7 +129,7 @@
     "print(traces.shape)\n",
     "data = pd.DataFrame(traces)  # + np.random.normal(0,1,Gsamp.T.shape))\n",
     "\n",
-    "bins = np.arange(data[0].min() - 1, data[0].max() + 1, 50)\n",
+    "bins = np.arange(data[0].min() - 1, data[0].max() + 1, 30)\n",
     "data[\"bin\"] = pd.cut(data[0], bins=bins)\n",
     "data = pd.concat([data, rp_df], axis=1, sort=False)\n",
     "# rp_df['initial_intensity'] = df[0]\n",
@@ -164,6 +167,7 @@
     "import numpy as np\n",
     "from matplotlib import cm\n",
     "from scipy.integrate import simps\n",
+    "from astropy.stats.biweight import biweight_midvariance\n",
     "\n",
     "\n",
     "def filter_df(df, prop_dict):\n",
@@ -191,7 +195,9 @@
     "        .groupby(df[\"bin\"])\n",
     "        .var(ddof=0)[df.groupby(df[\"bin\"]).size() > thresh]\n",
     "    )\n",
-    "\n",
+    "    #     sigma2 = (1.48*df.iloc[:,:t_end].groupby(df['bin']).mad()[df.groupby(df['bin']).size() > thresh])**2\n",
+    "    #     sigma2 = (df.iloc[:,:t_end].groupby(df['bin']).iqr()[df.groupby(df['bin']).size() > thresh]/1.35)**2\n",
+    "    #     sigma2 = sigma2 - (pbar**2).multiply(sigma2[0].values,axis=0)\n",
     "    return pbar, mu, sigma2\n",
     "\n",
     "\n",
@@ -208,7 +214,7 @@
     "    return pd.Series(nu_dict)\n",
     "\n",
     "\n",
-    "def fluct_plot(pbar, mu, sigma2, thresh):\n",
+    "def fluct_plot(pbar, mu, sigma2, thresh, q=1):\n",
     "    hist_df = df.groupby(df[\"bin\"]).size()\n",
     "    hist_df = hist_df[hist_df.values > thresh]\n",
     "    print(hist_df)\n",
@@ -219,7 +225,7 @@
     "    y = sigma2.div(mu[0].values, axis=\"rows\")\n",
     "    imax = pbar.index[-1].left\n",
     "    imin = pbar.index[0].left\n",
-    "    q = 1 / 2\n",
+    "    q = 1\n",
     "    cq = -1 / (1 / 2 * q**2 - 1 / 3 * q**3)\n",
     "    # plt.vlines(q,0,3)\n",
     "\n",
@@ -241,25 +247,25 @@
     "    plt.ylabel(r\"$\\frac{\\hat{\\sigma}^2}{f_{max}}$\", fontsize=20)\n",
     "\n",
     "\n",
-    "thresh = 70\n",
+    "thresh = 40\n",
     "\n",
     "prop_dict = {\n",
-    "    \"centroid_x\": [200, 1600],\n",
-    "    \"centroid_y\": [500, 1750],\n",
+    "    \"centroid_x\": [300, 1700],\n",
+    "    \"centroid_y\": [300, 1700],\n",
     "    \"area\": [30, 150],\n",
-    "    0: [2000, 10000],\n",
+    "    0: [1500, 10000],\n",
     "}\n",
     "# prop_dict = {'area': [30,150],\n",
-    "#              0: [2000, 10000]}\n",
+    "#              0: [1500, 10000]}\n",
     "\n",
     "df = filter_df(data, prop_dict)\n",
     "pbar, mu, sigma2 = get_stats(df, thresh)\n",
     "\n",
-    "\n",
-    "nu_df = nu_int(pbar, mu, sigma2)\n",
+    "q = 1\n",
+    "nu_df = nu_int(pbar, mu, sigma2, q)\n",
     "print(nu_df)\n",
     "\n",
-    "fluct_plot(pbar, mu, sigma2, thresh)"
+    "fluct_plot(pbar, mu, sigma2, thresh, q)"
    ]
   },
   {
@@ -360,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
