--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Cluster_Notebook.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Cluster_Notebook.ipynb
@@ -187,10 +187,10 @@
     "    output_path=output_path,\n",
     "    all_channels=all_channels,\n",
     "    trench_len_y=110,\n",
-    "    padding_y=50,\n",
+    "    padding_y=20,\n",
     "    trench_width_x=20,\n",
-    "    t_chunk=100,\n",
-    "    t_range=(0, 400),\n",
+    "    t_chunk=10,\n",
+    "    t_range=(0, 20),\n",
     "    y_percentile=90,\n",
     "    y_min_edge_dist=50,\n",
     "    smoothing_kernel_y=(17, 1),\n",
@@ -204,13 +204,6 @@
     "    otsu_scaling=0.7,\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -252,18 +245,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kymo.generate_kymograph(16)  ## figure out this error ##"
+    "import numpy as np"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo.generate_kymograph(15)  ## figure out this error ##"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "plt.plot(output[0][\"data\"][:, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### NOTE\n",
-    "\n",
-    "- There is a serious memory leak in the code somewhere. It was introduced somewhat recently, as it ran well on a dataset of similar size. I suspect it was introduced when the time range option was added. Worst case I can rollback to the github version.\n",
-    "\n",
-    "- Found the issue, on import I call in the whole color channel. Need to rework to prevent this call. fixed.\n",
     "\n",
     "- **How to deal with some fovs having a different number of rows than other fovs??? Try to make more flexible...**"
    ]
@@ -397,7 +413,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h5py_handle = h5py.File(\"/n/scratch2/de64/for_sylvia/timelapse/kymo/kymo_14.hdf5\", \"r\")"
+    "h5py_handle = h5py.File(\"/n/scratch2/de64/for_sylvia/timelapse/kymo/kymo_15.hdf5\", \"r\")"
    ]
   },
   {
@@ -415,7 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bottom = h5py_handle[\"1/channel_Phase\"]"
+    "top = h5py_handle[\"0/channel_Phase\"]"
    ]
   },
   {
@@ -443,7 +459,7 @@
    "outputs": [],
    "source": [
     "# plt.imshow(top[50,:,:,20])\n",
-    "tr.tplot.plot_kymograph(bottom[10, :, :, 0:50])"
+    "tr.tplot.plot_kymograph(top[10, :, :, 0:500])"
    ]
   },
   {
