Added sigma2 correction. Fixed handling of background trace, which bug in switching positions.

--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190331 Analysis JQS.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190331 Analysis JQS.ipynb
@@ -51,8 +51,11 @@
     "filename = \"190328photobleaching_flatcorr.pickle\"\n",
     "with open(os.path.join(base_filename, filename), \"rb\") as f:\n",
     "    data = pickle.load(f)\n",
+    "# filename = '190304photobleaching.arrow'\n",
     "# filename = '190328photobleaching_flatcorr.arrow'\n",
-    "# data = pa.read_serialized(pa.OSFile(os.path.join(base_filename, filename)), np.array).deserialize()"
+    "# with pa.OSFile(os.path.join(base_filename, filename), 'rb') as f:\n",
+    "#    data = pa.read_serialized(f)\n",
+    "# data = data.deserialize()"
    ]
   },
   {
@@ -61,9 +64,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import pyarrow as pa\n",
+    "# #filename = '190304photobleaching.arrow'\n",
+    "# filename = '190328photobleaching_flatcorr.arrow'\n",
     "# buf = pa.serialize(data).to_buffer()\n",
-    "# with pa.OSFile(os.path.join(base_filename, '190328photobleaching_flatcorr.arrow')) as f:\n",
+    "# with pa.OSFile(os.path.join(base_filename, filename), 'wb') as f:\n",
     "#    f.write(buf)"
    ]
   },
@@ -74,6 +78,7 @@
    "outputs": [],
    "source": [
     "# do p=0 correction\n",
+    "# background subtraction??\n",
     "# M correction\n",
     "# multi-position selector (multi-file?): just use a function to combine and add to data dict\n",
     "# check that depends funcs aren't firing twice\n",
@@ -151,7 +156,7 @@
     "    image_plot = regrid(RevImage(img))\n",
     "    labels_plot = regrid(\n",
     "        RevImage(segmentation.permute_labels(labels)), aggregator=\"max\"\n",
-    "    ).redim(z=\"label\")\n",
+    "    ).redim(z=hv.Dimension(\"label\", range=(0, labels.max())))\n",
     "    spatial_plots = xy_plot + image_plot + labels_plot\n",
     "    return spatial_plots\n",
     "\n",
@@ -200,6 +205,7 @@
     "        self._traces = data[\"traces\"][self.measurement][\n",
     "            1:, :\n",
     "        ]  # skip background trace (index 0)\n",
+    "        self._background_trace = data[\"traces\"][self.measurement][0, :]\n",
     "        self._regionprops = data[\"regionprops\"]\n",
     "        self._labels = data[\"labels\"]\n",
     "        self._img = data[\"segmentation_frame\"]\n",
@@ -256,6 +262,8 @@
     "            )\n",
     "        else:\n",
     "            raise ValueError\n",
+    "        # p=0 correction\n",
+    "        sigma2 = sigma2 - (pbar**2).multiply(sigma2[0], axis=0)\n",
     "        y = sigma2.div(mu[0], axis=\"rows\")\n",
     "        qs = np.linspace(0.1, 1, num_qs)  # TODO: make start point adjustable?\n",
     "        # TODO: the following line is slow (because of pandas indexing), following is a faster version\n",
@@ -340,6 +348,51 @@
     "viewer = PhotobleachingViewer(data, name=\"Photobleaching\")\n",
     "pn.Column(viewer.param, viewer.view)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "traces = viewer._traces\n",
+    "background_trace = viewer._background_trace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(background_trace)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(np.log(traces[0] - background_trace))\n",
+    "plt.plot(np.log(traces[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(np.log(traces[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
