--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190305 Analysis NAO.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190305 Analysis NAO.ipynb
@@ -11,7 +11,8 @@
     "import matplotlib.pyplot as plt\n",
     "import holoviews as hv\n",
     "from holoviews import opts, dim\n",
-    "import pickle"
+    "import pickle\n",
+    "from scipy import stats"
    ]
   },
   {
@@ -38,8 +39,9 @@
    "source": [
     "# with open('190311photobleaching.pickle', 'rb') as f:\n",
     "# with open('all_data.pickle', 'rb') as f:\n",
-    "with open(\"190313photobleaching_noflatcorr.pickle\", \"rb\") as f:\n",
-    "    # with open('190326photobleaching_flatcorr_fluoronly.pickle', 'rb') as f:\n",
+    "# with open('190313photobleaching_noflatcorr.pickle', 'rb') as f:\n",
+    "# with open('190326photobleaching_flatcorr_fluoronly.pickle', 'rb') as f:\n",
+    "with open(\"190328photobleaching_flatcorr.pickle\", \"rb\") as f:\n",
     "    d = pickle.load(f)"
    ]
   },
@@ -111,16 +113,19 @@
     "traces = []\n",
     "rp_list = []\n",
     "rp_df = pd.DataFrame()\n",
-    "directory = (\n",
-    "    \"/n/scratch2/jqs1/fidelity/190313/fluorescence/190313_mkate_100ms_100pct_laser.nd2\"\n",
-    ")\n",
-    "for i in [3, 5, 7, 8]:\n",
+    "directory = \"/n/scratch2/jqs1/fidelity/190326/190326_mkate_nochlor_wateragarpad_100ms_50pct_laser.nd2\"\n",
+    "# directory = '/n/scratch2/jqs1/fidelity/190313/phase/190313_SB1_in_mCherry_100ms_100pct_laser.nd2'\n",
+    "# directory = '/n/scratch2/jqs1/fidelity/190313/phase/190313_SB1_in_GFP_100ms_100pct_laser.nd2'\n",
+    "for i in d[directory].keys():\n",
+    "    #     if i not in [5,6,8]:\n",
     "    print(i)\n",
     "    #     measurements, regionprops, labels, img = d['/n/scratch2/jqs1/fidelity/190301/jqs_photobleach_100ms_de32_mkate2_000{:d}.nd2'.format(i)]\n",
     "    regionprops = d[directory][i][\"regionprops\"]\n",
     "    measurements = d[directory][i][\"traces\"]\n",
+    "    #         print(np.nanmin(measurements['mean'][1:]))\n",
+    "    traces.append(measurements[\"mean\"][1:] - np.nanmin(measurements[\"mean\"][1:]))\n",
+    "    #   traces.append(measurements['mean'][1:])\n",
     "\n",
-    "    traces.append(measurements[\"mean\"][1:])\n",
     "    rp_list.append(regionprops)\n",
     "    print(measurements[\"mean\"][1:].shape)\n",
     "traces = np.concatenate(traces)\n",
@@ -129,7 +134,7 @@
     "print(traces.shape)\n",
     "data = pd.DataFrame(traces)  # + np.random.normal(0,1,Gsamp.T.shape))\n",
     "\n",
-    "bins = np.arange(data[0].min() - 1, data[0].max() + 1, 30)\n",
+    "bins = np.linspace(data[0].min(), data[0].max(), 150)\n",
     "data[\"bin\"] = pd.cut(data[0], bins=bins)\n",
     "data = pd.concat([data, rp_df], axis=1, sort=False)\n",
     "# rp_df['initial_intensity'] = df[0]\n",
@@ -146,13 +151,30 @@
     "# traces = measurements['mean']\n",
     "idxs = np.random.permutation(traces.shape[0])\n",
     "downsample = (\n",
-    "    10  # set to 1 to show all traces (instead of 10%); this will make your browser slow\n",
+    "    30  # set to 1 to show all traces (instead of 10%); this will make your browser slow\n",
     ")\n",
     "curves = [\n",
     "    {\"x\": np.arange(traces.shape[1]), \"y\": traces[i], \"i\": idxs[i]}\n",
     "    for i in range(traces.shape[0] // downsample)\n",
     "]\n",
     "hv.Contours(curves, vdims=[\"i\"]).options(color_index=\"i\", cmap=\"Category20\", logy=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tpoint = 600\n",
+    "blorp = traces[traces[:, tpoint] < 100, tpoint]\n",
+    "# blorp = blorp[::10]\n",
+    "plt.hist(blorp, bins=30, density=True)\n",
+    "x = np.linspace(blorp.min(), blorp.max(), 100)\n",
+    "mu, sigma = stats.norm.fit(blorp)\n",
+    "print(mu, sigma**2)\n",
+    "print(stats.kstest(blorp, \"norm\", args=(mu, sigma)))\n",
+    "plt.plot(x, stats.norm.pdf(x, mu, sigma), linewidth=6, alpha=0.8)"
    ]
   },
   {
@@ -182,19 +204,14 @@
     "\n",
     "\n",
     "def get_stats(df, thresh):\n",
-    "    p = df.iloc[:, :t_end].apply(lambda x: x / x[0], axis=1)\n",
+    "    trajectories = df.iloc[:, :t_end]\n",
+    "    p = trajectories.apply(lambda x: x / x[0], axis=1)\n",
     "    p[\"bin\"] = df[\"bin\"]\n",
     "    pbar = p.groupby(p[\"bin\"]).mean()[p.groupby(p[\"bin\"]).size() > thresh]\n",
-    "    mu = (\n",
-    "        df.iloc[:, :t_end]\n",
-    "        .groupby(df[\"bin\"])\n",
-    "        .mean()[df.groupby(df[\"bin\"]).size() > thresh]\n",
-    "    )\n",
-    "    sigma2 = (\n",
-    "        df.iloc[:, :t_end]\n",
-    "        .groupby(df[\"bin\"])\n",
-    "        .var(ddof=0)[df.groupby(df[\"bin\"]).size() > thresh]\n",
-    "    )\n",
+    "    mu = trajectories.groupby(df[\"bin\"]).mean()[df.groupby(df[\"bin\"]).size() > thresh]\n",
+    "    sigma2 = trajectories.groupby(df[\"bin\"]).var(ddof=0)[\n",
+    "        df.groupby(df[\"bin\"]).size() > thresh\n",
+    "    ]\n",
     "    #     sigma2 = (1.48*df.iloc[:,:t_end].groupby(df['bin']).mad()[df.groupby(df['bin']).size() > thresh])**2\n",
     "    #     sigma2 = (df.iloc[:,:t_end].groupby(df['bin']).iqr()[df.groupby(df['bin']).size() > thresh]/1.35)**2\n",
     "    #     sigma2 = sigma2 - (pbar**2).multiply(sigma2[0].values,axis=0)\n",
@@ -218,6 +235,7 @@
     "    hist_df = df.groupby(df[\"bin\"]).size()\n",
     "    hist_df = hist_df[hist_df.values > thresh]\n",
     "    print(hist_df)\n",
+    "    print(f\"Total number of cells is {np.sum(hist_df.values)}\")\n",
     "\n",
     "    plt.figure(figsize=(12, 8))\n",
     "    cmap = cm.get_cmap(\"coolwarm\")\n",
@@ -232,14 +250,18 @@
     "    for name, group in pbar.groupby(\"bin\"):\n",
     "        c = (name.left - imin) / (imax - imin)\n",
     "        plt.scatter(\n",
-    "            1 - pbar.loc[name].values, y.loc[name].values, color=cmap(c), label=name\n",
+    "            1 - pbar.loc[name].values,\n",
+    "            y.loc[name].values,\n",
+    "            color=cmap(c),\n",
+    "            label=name.left,\n",
     "        )\n",
     "        plt.legend()\n",
     "\n",
+    "    p = np.linspace(0, 1, 1000)\n",
+    "    plt.plot(p, nu_df.mean() * p * (1 - p), linewidth=6, alpha=0.8, color=\"g\")\n",
+    "\n",
     "    plt.title(\n",
-    "        r\"$\\nu =  {0:2.0f} \\cdot \\int\\frac{{\\hat{{\\sigma}}^2}}{{f_{{max}}}}dp$ = {1:2.2f}\".format(\n",
-    "            -cq, nu_df.mean()\n",
-    "        ),\n",
+    "        rf\"$\\nu =  {-cq:.0f} \\cdot \\int\\frac{{\\hat{{\\sigma}}^2}}{{f_{{max}}}}dp$ = {nu_df.mean():.2f}\",\n",
     "        fontsize=20,\n",
     "        pad=20,\n",
     "    )\n",
@@ -247,16 +269,14 @@
     "    plt.ylabel(r\"$\\frac{\\hat{\\sigma}^2}{f_{max}}$\", fontsize=20)\n",
     "\n",
     "\n",
-    "thresh = 40\n",
+    "#     plt.ylim([0,.001])\n",
+    "thresh = 50\n",
     "\n",
-    "prop_dict = {\n",
-    "    \"centroid_x\": [300, 1700],\n",
-    "    \"centroid_y\": [300, 1700],\n",
-    "    \"area\": [30, 150],\n",
-    "    0: [1500, 10000],\n",
-    "}\n",
-    "# prop_dict = {'area': [30,150],\n",
-    "#              0: [1500, 10000]}\n",
+    "# prop_dict = {'centroid_x': [500, 1800],\n",
+    "#              'centroid_y': [0, 1500],\n",
+    "#              'area': [30,150],\n",
+    "#              0: [500, 2000]}\n",
+    "prop_dict = {\"area\": [50, 200], 0: [0, 1]}\n",
     "\n",
     "df = filter_df(data, prop_dict)\n",
     "pbar, mu, sigma2 = get_stats(df, thresh)\n",
@@ -264,6 +284,114 @@
     "q = 1\n",
     "nu_df = nu_int(pbar, mu, sigma2, q)\n",
     "print(nu_df)\n",
+    "\n",
+    "fluct_plot(pbar, mu, sigma2, thresh, q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import pylab as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from matplotlib import cm\n",
+    "from scipy.integrate import simps\n",
+    "from astropy.stats.biweight import biweight_midvariance\n",
+    "\n",
+    "\n",
+    "def filter_df(df, prop_dict):\n",
+    "    processed_df = df.copy()\n",
+    "    for prop in prop_dict:\n",
+    "        processed_df = processed_df[\n",
+    "            (processed_df[prop] > prop_dict[prop][0])\n",
+    "            & (processed_df[prop] < prop_dict[prop][1])\n",
+    "        ]\n",
+    "\n",
+    "    return processed_df\n",
+    "\n",
+    "\n",
+    "def get_stats(df, thresh):\n",
+    "    trajectories = df.iloc[:, :t_end]\n",
+    "    p = trajectories.apply(lambda x: x / x[0], axis=1)\n",
+    "    #     p['bin'] = df['bin']\n",
+    "    pbar = p.mean()\n",
+    "    mu = trajectories.mean()\n",
+    "    sigma2 = (p - pbar) ** 2\n",
+    "    #     sigma2 = (1.48*df.iloc[:,:t_end].groupby(df['bin']).mad()[df.groupby(df['bin']).size() > thresh])**2\n",
+    "    #     sigma2 = (df.iloc[:,:t_end].groupby(df['bin']).iqr()[df.groupby(df['bin']).size() > thresh]/1.35)**2\n",
+    "    #     sigma2 = sigma2 - (pbar**2).multiply(sigma2[0].values,axis=0)\n",
+    "    return pbar, mu, sigma2\n",
+    "\n",
+    "\n",
+    "def nu_int(pbar, mu, sigma, q=1):\n",
+    "    nu_dict = {}  # pd.Series()\n",
+    "    cq = -1 / (1 / 2 * q**2 - 1 / 3 * q**3)\n",
+    "    y = sigma2\n",
+    "    #     print(y)\n",
+    "    dp = pbar.values\n",
+    "    dp = dp[pbar.values > 1 - q]\n",
+    "    print(\n",
+    "        y.shape,\n",
+    "    )\n",
+    "    f = y.iloc[pbar.values > 1 - q]\n",
+    "\n",
+    "    nu_dict[name] = cq * simps(f, dp)\n",
+    "\n",
+    "    return pd.Series(nu_dict)\n",
+    "\n",
+    "\n",
+    "def fluct_plot(pbar, mu, sigma2, thresh, q=1):\n",
+    "    hist_df = df.groupby(df[\"bin\"]).size()\n",
+    "    hist_df = hist_df[hist_df.values > thresh]\n",
+    "    print(hist_df)\n",
+    "    print(f\"Total number of cells is {np.sum(hist_df.values)}\")\n",
+    "\n",
+    "    plt.figure(figsize=(12, 8))\n",
+    "    cmap = cm.get_cmap(\"coolwarm\")\n",
+    "\n",
+    "    y = sigma2 * mu[0]\n",
+    "    y[np.isnan(y)] = 0\n",
+    "    q = 1\n",
+    "    cq = -1 / (1 / 2 * q**2 - 1 / 3 * q**3)\n",
+    "    # plt.vlines(q,0,3)\n",
+    "    nu = np.nanmean(cq * simps(y, pbar))\n",
+    "    print(cq * simps(y.mean(), pbar))\n",
+    "\n",
+    "    #     c = (name.left - imin)/(imax - imin)\n",
+    "    plt.scatter(1 - pbar, np.nanmean(y, axis=0), color=\"k\")\n",
+    "    plt.legend()\n",
+    "\n",
+    "    p = np.linspace(0, 1, 1000)\n",
+    "    plt.plot(p, nu * p * (1 - p), linewidth=6, alpha=0.8, color=\"g\")\n",
+    "\n",
+    "    plt.title(\n",
+    "        rf\"$\\nu =  {-cq:.0f} \\cdot \\int\\frac{{\\hat{{\\sigma}}^2}}{{f_{{max}}}}dp$ = {nu:.2f}\",\n",
+    "        fontsize=20,\n",
+    "        pad=20,\n",
+    "    )\n",
+    "    plt.xlabel(r\"$(1-\\hat{p})$\", fontsize=20)\n",
+    "    plt.ylabel(r\"$\\frac{\\hat{\\sigma}^2}{f_{max}}$\", fontsize=20)\n",
+    "\n",
+    "\n",
+    "#     plt.ylim([0,.01])\n",
+    "thresh = 50\n",
+    "\n",
+    "# prop_dict = {'centroid_x': [500, 1800],\n",
+    "#              'centroid_y': [0, 1500],\n",
+    "#              'area': [30,150],\n",
+    "#              0: [500, 2000]}\n",
+    "prop_dict = {\"area\": [50, 200], 0: [0, 1]}\n",
+    "\n",
+    "df = filter_df(data, prop_dict)\n",
+    "pbar, mu, sigma2 = get_stats(df, thresh)\n",
+    "\n",
+    "q = 1\n",
+    "# nu_df = nu_int(pbar,mu,sigma2,q)\n",
+    "# print(nu_df)\n",
     "\n",
     "fluct_plot(pbar, mu, sigma2, thresh, q)"
    ]
@@ -329,11 +457,13 @@
     "        axs[0].set_xlim(data.centroid_x.min(), data.centroid_x.max())\n",
     "        axs[0].set_ylim(data.centroid_y.min(), data.centroid_y.max())\n",
     "        axs[1].semilogy(group.iloc[:, :t_end].T, color=cmap(c))\n",
+    "        axs[1].set_ylim([1, 2000])\n",
     "        #         tempfig = plt.figure(figsize=(8,8))\n",
     "        gridaxs.flatten()[ind].semilogy(group.iloc[:, :t_end].T, color=cmap(c))\n",
     "        gridaxs.flatten()[ind].set_title(\n",
-    "            r\"Interval = {:s}, $\\nu = $ {:2.2f}\".format(str(name), nu_df[name])\n",
+    "            rf\"Interval = {str(name)}, $\\nu = $ {nu_df[name]:.2f}\"\n",
     "        )\n",
+    "        gridaxs.flatten()[ind].set_ylim([1, 2000])\n",
     "        ind += 1\n",
     "    else:\n",
     "        axs[0].scatter(\n",
