--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190305 Analysis NAO.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190305 Analysis NAO.ipynb
@@ -41,7 +41,7 @@
     "# with open('all_data.pickle', 'rb') as f:\n",
     "# with open('190313photobleaching_noflatcorr.pickle', 'rb') as f:\n",
     "# with open('190326photobleaching_flatcorr_fluoronly.pickle', 'rb') as f:\n",
-    "with open(\"190328photobleaching_flatcorr.pickle\", \"rb\") as f:\n",
+    "with open(\"190405photobleaching_noflatcorr.pickle\", \"rb\") as f:\n",
     "    d = pickle.load(f)"
    ]
   },
@@ -113,21 +113,23 @@
     "traces = []\n",
     "rp_list = []\n",
     "rp_df = pd.DataFrame()\n",
-    "directory = \"/n/scratch2/jqs1/fidelity/190326/190326_mkate_nochlor_wateragarpad_100ms_50pct_laser.nd2\"\n",
+    "directory = (\n",
+    "    \"/n/scratch2/jqs1/fidelity/190313/fluorescence/190313_mkate_100ms_100pct_laser.nd2\"\n",
+    ")\n",
     "# directory = '/n/scratch2/jqs1/fidelity/190313/phase/190313_SB1_in_mCherry_100ms_100pct_laser.nd2'\n",
     "# directory = '/n/scratch2/jqs1/fidelity/190313/phase/190313_SB1_in_GFP_100ms_100pct_laser.nd2'\n",
     "for i in d[directory].keys():\n",
-    "    #     if i not in [5,6,8]:\n",
-    "    print(i)\n",
-    "    #     measurements, regionprops, labels, img = d['/n/scratch2/jqs1/fidelity/190301/jqs_photobleach_100ms_de32_mkate2_000{:d}.nd2'.format(i)]\n",
-    "    regionprops = d[directory][i][\"regionprops\"]\n",
-    "    measurements = d[directory][i][\"traces\"]\n",
-    "    #         print(np.nanmin(measurements['mean'][1:]))\n",
-    "    traces.append(measurements[\"mean\"][1:] - np.nanmin(measurements[\"mean\"][1:]))\n",
-    "    #   traces.append(measurements['mean'][1:])\n",
+    "    if i not in []:\n",
+    "        print(i)\n",
+    "        #     measurements, regionprops, labels, img = d['/n/scratch2/jqs1/fidelity/190301/jqs_photobleach_100ms_de32_mkate2_000{:d}.nd2'.format(i)]\n",
+    "        regionprops = d[directory][i][\"regionprops\"]\n",
+    "        measurements = d[directory][i][\"traces\"]\n",
+    "        #         print(np.nanmin(measurements['mean'][1:]))\n",
+    "        traces.append(measurements[\"mean\"][1:] - np.nanmin(measurements[\"mean\"][1:]))\n",
+    "        #         traces.append(measurements['mean'][1:])\n",
     "\n",
-    "    rp_list.append(regionprops)\n",
-    "    print(measurements[\"mean\"][1:].shape)\n",
+    "        rp_list.append(regionprops)\n",
+    "        print(measurements[\"mean\"][1:].shape)\n",
     "traces = np.concatenate(traces)\n",
     "rp_df = pd.concat(rp_list, sort=False)\n",
     "rp_df.reset_index(inplace=True)\n",
@@ -269,14 +271,20 @@
     "    plt.ylabel(r\"$\\frac{\\hat{\\sigma}^2}{f_{max}}$\", fontsize=20)\n",
     "\n",
     "\n",
-    "#     plt.ylim([0,.001])\n",
-    "thresh = 50\n",
+    "#     plt.ylim([0,.0001])\n",
+    "thresh = 100\n",
     "\n",
-    "# prop_dict = {'centroid_x': [500, 1800],\n",
-    "#              'centroid_y': [0, 1500],\n",
-    "#              'area': [30,150],\n",
-    "#              0: [500, 2000]}\n",
-    "prop_dict = {\"area\": [50, 200], 0: [0, 1]}\n",
+    "prop_dict = {\n",
+    "    \"centroid_x\": [500, 1700],\n",
+    "    \"centroid_y\": [500, 1700],\n",
+    "    \"area\": [\n",
+    "        data.area.median() - 2 * data.area.std(),\n",
+    "        data.area.median() + 2 * data.area.std(),\n",
+    "    ],\n",
+    "    0: [800, 3000],\n",
+    "}\n",
+    "# prop_dict = {'area': [data.area.median() - 2*data.area.std(), data.area.median() + 2*data.area.std()],\n",
+    "#              0: [0, 1]}\n",
     "\n",
     "df = filter_df(data, prop_dict)\n",
     "pbar, mu, sigma2 = get_stats(df, thresh)\n",
@@ -299,7 +307,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from matplotlib import cm\n",
-    "from scipy.integrate import simps\n",
+    "from scipy.integrate import simps, trapz\n",
     "from astropy.stats.biweight import biweight_midvariance\n",
     "\n",
     "\n",
@@ -334,9 +342,7 @@
     "    #     print(y)\n",
     "    dp = pbar.values\n",
     "    dp = dp[pbar.values > 1 - q]\n",
-    "    print(\n",
-    "        y.shape,\n",
-    "    )\n",
+    "    #     print(y.shape, )\n",
     "    f = y.iloc[pbar.values > 1 - q]\n",
     "\n",
     "    nu_dict[name] = cq * simps(f, dp)\n",
@@ -347,49 +353,92 @@
     "def fluct_plot(pbar, mu, sigma2, thresh, q=1):\n",
     "    hist_df = df.groupby(df[\"bin\"]).size()\n",
     "    hist_df = hist_df[hist_df.values > thresh]\n",
-    "    print(hist_df)\n",
-    "    print(f\"Total number of cells is {np.sum(hist_df.values)}\")\n",
+    "    #     print(hist_df)\n",
+    "    #     print(f'Total number of cells is {np.sum(hist_df.values)}')\n",
     "\n",
     "    plt.figure(figsize=(12, 8))\n",
     "    cmap = cm.get_cmap(\"coolwarm\")\n",
     "\n",
     "    y = sigma2 * mu[0]\n",
     "    y[np.isnan(y)] = 0\n",
-    "    q = 1\n",
+    "    #     y = y.T[~np.isnan(pbar.values)].T\n",
+    "    #     pbar = pbar[np.isnan(pbar) == False]\n",
     "    cq = -1 / (1 / 2 * q**2 - 1 / 3 * q**3)\n",
     "    # plt.vlines(q,0,3)\n",
-    "    nu = np.nanmean(cq * simps(y, pbar))\n",
-    "    print(cq * simps(y.mean(), pbar))\n",
+    "    #     y = y.T.iloc[pbar.values > 1-q].T\n",
+    "    #     pbar = pbar.iloc[pbar.values > 1-q]\n",
+    "    #     print(y.values.shape, pbar.values.reshape(-1,1).shape,cq)\n",
+    "\n",
+    "    nu = np.nanmean(\n",
+    "        cq * simps(y.T.iloc[pbar.values > 1 - q].T, pbar.iloc[pbar.values > 1 - q])\n",
+    "    )\n",
+    "    #     print(cq*trapz(y.mean()[0],pbar))\n",
     "\n",
     "    #     c = (name.left - imin)/(imax - imin)\n",
-    "    plt.scatter(1 - pbar, np.nanmean(y, axis=0), color=\"k\")\n",
-    "    plt.legend()\n",
+    "    plt.scatter(1 - pbar, np.nanmean(y, axis=0), color=\"k\", label=\"Single-cell data\")\n",
+    "    #     plt.fill_between(1-pbar,np.nanmean(y,axis=0),alpha=.1,color='r')\n",
     "\n",
     "    p = np.linspace(0, 1, 1000)\n",
-    "    plt.plot(p, nu * p * (1 - p), linewidth=6, alpha=0.8, color=\"g\")\n",
+    "    plt.plot(\n",
+    "        p,\n",
+    "        nu * p * (1 - p),\n",
+    "        linewidth=6,\n",
+    "        alpha=0.5,\n",
+    "        color=\"g\",\n",
+    "        label=\"Theoretical curve\",\n",
+    "    )\n",
+    "    p_left = np.linspace(0, q, 100)\n",
+    "    p_right = np.linspace(q, 1, 100)\n",
     "\n",
+    "    plt.fill_between(\n",
+    "        p_left,\n",
+    "        nu * p_left * (1 - p_left),\n",
+    "        alpha=0.3,\n",
+    "        color=\"c\",\n",
+    "        label=\"Integrated area\",\n",
+    "    )\n",
+    "    plt.fill_between(\n",
+    "        p_right,\n",
+    "        nu * p_right * (1 - p_right),\n",
+    "        alpha=0.3,\n",
+    "        color=\"r\",\n",
+    "        hatch=\"/\",\n",
+    "        label=\"Interpolated area\",\n",
+    "    )\n",
+    "\n",
+    "    plt.vlines(\n",
+    "        q, 0, nu * q * (1 - q), alpha=0.5, linewidth=5, color=\"m\", label=f\"q = {q}\"\n",
+    "    )\n",
     "    plt.title(\n",
-    "        rf\"$\\nu =  {-cq:.0f} \\cdot \\int\\frac{{\\hat{{\\sigma}}^2}}{{f_{{max}}}}dp$ = {nu:.2f}\",\n",
+    "        rf\"$\\nu =  {-cq:.1f} \\cdot \\int\\frac{{\\hat{{\\sigma}}^2}}{{f_{{max}}}}dp$ = {nu:.6f}\",\n",
     "        fontsize=20,\n",
     "        pad=20,\n",
     "    )\n",
     "    plt.xlabel(r\"$(1-\\hat{p})$\", fontsize=20)\n",
     "    plt.ylabel(r\"$\\frac{\\hat{\\sigma}^2}{f_{max}}$\", fontsize=20)\n",
+    "    plt.legend()\n",
     "\n",
     "\n",
-    "#     plt.ylim([0,.01])\n",
+    "#     plt.ylim(bottom=0,top=.0004)\n",
     "thresh = 50\n",
     "\n",
-    "# prop_dict = {'centroid_x': [500, 1800],\n",
-    "#              'centroid_y': [0, 1500],\n",
-    "#              'area': [30,150],\n",
-    "#              0: [500, 2000]}\n",
-    "prop_dict = {\"area\": [50, 200], 0: [0, 1]}\n",
+    "prop_dict = {\n",
+    "    \"centroid_x\": [500, 1700],\n",
+    "    \"centroid_y\": [500, 1700],\n",
+    "    \"area\": [\n",
+    "        data.area.median() - 2 * data.area.std(),\n",
+    "        data.area.median() + 2 * data.area.std(),\n",
+    "    ],\n",
+    "    0: [1000, 3000],\n",
+    "}\n",
+    "# prop_dict = {'area': [data.area.median() - 2*data.area.std(), data.area.median() + 2*data.area.std()],\n",
+    "#               0: [.1, .4]}\n",
     "\n",
     "df = filter_df(data, prop_dict)\n",
+    "print(f\"Total number of cells used is {df.shape[0]} out of {data.shape[0]}\")\n",
     "pbar, mu, sigma2 = get_stats(df, thresh)\n",
     "\n",
-    "q = 1\n",
+    "q = 0.7\n",
     "# nu_df = nu_int(pbar,mu,sigma2,q)\n",
     "# print(nu_df)\n",
     "\n",
@@ -423,7 +472,7 @@
    "source": [
     "I0 = traces[:, 0]\n",
     "plt.hist(I0, bins=30)\n",
-    "print(np.mean(I0), np.var(I0))"
+    "print(np.mean(I0), np.std(I0))"
    ]
   },
   {
@@ -437,32 +486,26 @@
     "gridfig, gridaxs = plt.subplots(\n",
     "    nrows=int(np.ceil(nu_df.size / 4)), ncols=4, figsize=(24, 30)\n",
     ")\n",
-    "imax = pbar.index[-1].left\n",
-    "imin = pbar.index[0].left\n",
+    "imax = df.bin.values[-1].left\n",
+    "imin = df.bin.values[0].left\n",
     "ind = 0\n",
     "for name, group in df.groupby(\"bin\"):\n",
     "    if group.shape[0] > thresh:  # & (np.round(name.left) == 3352):\n",
-    "        #         c = (name.left - imin)/(imax - imin)\n",
-    "        c = (nu_df[name] - nu_df.min()) / (nu_df.max() - nu_df.min())\n",
+    "        #         c = .5\n",
+    "        c = (name.left - imin) / (imax - imin)\n",
+    "        #         c = (nu_df[name] - nu_df.min())/(nu_df.max() - nu_df.min())\n",
     "        #         z = name.left*np.ones(group.centroid_x.shape)\n",
     "\n",
     "        axs[0].scatter(\n",
-    "            group.centroid_x,\n",
-    "            group.centroid_y,\n",
-    "            color=cmap(c),\n",
-    "            marker=\"o\",\n",
-    "            s=16,\n",
-    "            label=nu_df[name],\n",
-    "        )\n",
+    "            group.centroid_x, group.centroid_y, color=cmap(c), marker=\"o\", s=16\n",
+    "        )  # , label=nu_df[name])\n",
     "        axs[0].set_xlim(data.centroid_x.min(), data.centroid_x.max())\n",
     "        axs[0].set_ylim(data.centroid_y.min(), data.centroid_y.max())\n",
     "        axs[1].semilogy(group.iloc[:, :t_end].T, color=cmap(c))\n",
     "        axs[1].set_ylim([1, 2000])\n",
     "        #         tempfig = plt.figure(figsize=(8,8))\n",
     "        gridaxs.flatten()[ind].semilogy(group.iloc[:, :t_end].T, color=cmap(c))\n",
-    "        gridaxs.flatten()[ind].set_title(\n",
-    "            rf\"Interval = {str(name)}, $\\nu = $ {nu_df[name]:.2f}\"\n",
-    "        )\n",
+    "        #         gridaxs.flatten()[ind].set_title(rf'Interval = {str(name)}, $\\nu = $ {nu_df[name]:.2f}')\n",
     "        gridaxs.flatten()[ind].set_ylim([1, 2000])\n",
     "        ind += 1\n",
     "    else:\n",
