still broken, but outputting something

--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190409 Analysis NAO.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190409 Analysis NAO.ipynb
@@ -124,21 +124,10 @@
     "    else:\n",
     "        cmap = \"bmy\"\n",
     "    nus = nu_qs.iloc[:, -1]\n",
-    "    fluctuation_curves = [\n",
-    "        {\"x\": 1 - pbar.values[i], \"y\": y.values[i], \"i\": colors[i]}\n",
-    "        for i in range(y.shape[0])\n",
-    "    ]\n",
-    "    fluctuation_plot = hv.Contours(fluctuation_curves, vdims=[\"i\"]).options(\n",
-    "        color_index=\"i\", cmap=cmap\n",
-    "    )\n",
-    "    integral_curves = [\n",
-    "        {\"x\": qs, \"y\": nu_qs.values[i], \"i\": colors[i]} for i in range(nu_qs.shape[0])\n",
-    "    ]\n",
-    "    integral_plot = (\n",
-    "        hv.Contours(integral_curves, vdims=[\"i\"])\n",
-    "        .redim(y=\"integral\")\n",
-    "        .options(color_index=\"i\", cmap=cmap)\n",
-    "    )\n",
+    "    fluctuation_curves = {\"x\": 1 - pbar.values, \"y\": y.values}\n",
+    "    fluctuation_plot = hv.Scatter(fluctuation_curves)\n",
+    "    integral_curves = {\"x\": qs, \"y\": nu_qs.values}\n",
+    "    integral_plot = hv.Contours(integral_curves).redim(y=\"integral\")\n",
     "    plots = fluctuation_plot, integral_plot\n",
     "    return plots\n",
     "\n",
@@ -185,9 +174,11 @@
     "    fluctuation_colormap = param.ObjectSelector(\n",
     "        objects=[\"random\", \"bin\", \"gain\"], default=\"bin\"\n",
     "    )\n",
+    "    #     traces_colormap = param.ObjectSelector(objects=['random', 'fluorescence', 'bin', 'area', 'gain'], default='bin')\n",
     "    traces_colormap = param.ObjectSelector(\n",
-    "        objects=[\"random\", \"fluorescence\", \"bin\", \"area\", \"gain\"], default=\"bin\"\n",
+    "        objects=[\"random\", \"fluorescence\", \"area\"], default=\"fluorescence\"\n",
     "    )\n",
+    "\n",
     "    downsample = param.ObjectSelector(objects=[1000, 100, 30, 10, 1], default=30)\n",
     "    normalize_traces = param.Boolean(True)\n",
     "\n",
@@ -278,6 +269,7 @@
     "            y_ary[pbar_ary < 1 - q] = 0\n",
     "            nu_q = -1 / (1 / 2 * q**2 - 1 / 3 * q**3) * simps(y_ary, pbar, axis=1)\n",
     "            nu_qs.append(nu_q)\n",
+    "        print(y.index)\n",
     "        nu_qs = pd.DataFrame(np.array(nu_qs)[::-1, :].T, index=y.index, columns=qs)\n",
     "        self._pbar = pbar\n",
     "        self._y = y\n",
@@ -329,42 +321,39 @@
     "            nu_q = C_q * simps(y_ary, pbar_ary)\n",
     "            nu_qs.append(nu_q)\n",
     "        print(np.array(nu_qs)[::-1].T, ybar.index)\n",
-    "        nu_qs = pd.DataFrame(np.array(nu_qs)[::-1].T, index=ybar.index, columns=qs)\n",
+    "        nu_qs = pd.DataFrame(np.array(nu_qs)[::-1].T)\n",
     "        self._pbar = pbar\n",
     "        self._y = ybar\n",
     "        self._qs = qs\n",
     "        self._nu_qs = nu_qs\n",
-    "        self._bins = bins\n",
     "\n",
     "    def _colors(self, colormap):\n",
     "        if colormap == \"random\":\n",
     "            colors = None\n",
     "        elif colormap == \"fluorescence\":\n",
     "            colors = np.log(self._traces[:, 0])\n",
-    "        elif colormap == \"bin\":\n",
-    "            colors = self._bins.values.codes\n",
+    "        #         elif colormap == 'bin':\n",
+    "        #             colors = self._bins.values.codes\n",
     "        elif colormap == \"area\":\n",
     "            colors = self._regionprops[\"area\"].values\n",
-    "        elif colormap == \"gain\":\n",
-    "            # TODO: make cleaner\n",
-    "            gain = self._nu_qs.iloc[:, -1]\n",
-    "            colors = pd.merge(\n",
-    "                self._bins, gain, left_on=\"bin\", right_index=True, how=\"left\"\n",
-    "            )[gain.name].values\n",
+    "        #         elif colormap == 'gain':\n",
+    "        #             # TODO: make cleaner\n",
+    "        #             gain = self._nu_qs.iloc[:,-1]\n",
+    "        #             colors = pd.merge(self._bins, gain, left_on='bin', right_index=True, how='left')[gain.name].values\n",
     "        else:\n",
     "            raise ValueError\n",
     "        return colors\n",
     "\n",
-    "    def _bin_colors(self, colormap):\n",
-    "        if colormap == \"random\":\n",
-    "            colors = None\n",
-    "        elif colormap == \"bin\":\n",
-    "            colors = self._nu_qs.index.values.codes\n",
-    "        elif colormap == \"gain\":\n",
-    "            colors = self._nu_qs.iloc[:, -1].values\n",
-    "        else:\n",
-    "            raise ValueError\n",
-    "        return colors\n",
+    "    #     def _bin_colors(self, colormap):\n",
+    "    #         if colormap == 'random':\n",
+    "    #             colors = None\n",
+    "    #         elif colormap == 'bin':\n",
+    "    #             colors = self._nu_qs.index.values.codes\n",
+    "    #         elif colormap == 'gain':\n",
+    "    #             colors = self._nu_qs.iloc[:,-1].values\n",
+    "    #         else:\n",
+    "    #             raise ValueError\n",
+    "    #         return colors\n",
     "\n",
     "    @param.depends(\n",
     "        \"filename\",\n",
@@ -379,7 +368,7 @@
     "    def view(self):\n",
     "        gs = pn.GridSpec(sizing_mode=\"stretch_both\")\n",
     "        trace_colors = self._colors(self.traces_colormap)\n",
-    "        fluctuation_colors = self._bin_colors(self.fluctuation_colormap)\n",
+    "        #         fluctuation_colors = self._bin_colors(self.fluctuation_colormap)\n",
     "        gs[0:1, 0:2] = _trace_plot(\n",
     "            self._traces,\n",
     "            downsample=self.downsample,\n",
@@ -387,7 +376,7 @@
     "            colors=trace_colors,\n",
     "        )\n",
     "        fluct_plots = _fluctuation_plots(\n",
-    "            self._pbar, self._y, self._qs, self._nu_qs, colors=fluctuation_colors\n",
+    "            self._pbar, self._y, self._qs, self._nu_qs, colors=trace_colors\n",
     "        )\n",
     "        gs[1:2, 0:1] = fluct_plots[0]\n",
     "        gs[1:2, 1:2] = fluct_plots[1]\n",
