--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190409 Analysis NAO.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190409 Analysis NAO.ipynb
@@ -172,7 +172,7 @@
     "        default=\"biweight_midvariance\",\n",
     "    )\n",
     "    fluctuation_colormap = param.ObjectSelector(\n",
-    "        objects=[\"random\", \"bin\", \"gain\"], default=\"bin\"\n",
+    "        objects=[\"random\", \"bin\", \"gain\"], default=\"random\"\n",
     "    )\n",
     "    #     traces_colormap = param.ObjectSelector(objects=['random', 'fluorescence', 'bin', 'area', 'gain'], default='bin')\n",
     "    traces_colormap = param.ObjectSelector(\n",
