--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Cluster_Notebook.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Cluster_Notebook.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "kymo_controller = tr.cluster.dask_controller(\n",
-    "    walltime=\"04:00:00\", local=False, n_workers=40, memory=\"2GB\"\n",
+    "    walltime=\"04:00:00\", local=False, n_workers=20, memory=\"2GB\"\n",
     ")\n",
     "kymo_controller.startdask()\n",
     "kymo_controller.daskcluster.start_workers()"
@@ -59,9 +59,8 @@
    "outputs": [],
    "source": [
     "hdf5_extractor = tr.ndextract.hdf5_fov_extractor(\n",
-    "    \"/n/scratch2/de64/for_sylvia/2019-02-08_bacillus_bDE6_bDE7_bDE8_timelapse.nd2\",\n",
-    "    \"/n/scratch2/de64/for_sylvia/timelapse/hdf5\",\n",
-    "    num_cols=40,\n",
+    "    \"/n/scratch2/de64/full_pipeline_test/40x_Ph2_Test_1.5.nd2\",\n",
+    "    \"/n/scratch2/de64/full_pipeline_test/hdf5\",\n",
     ")  ##find a more elegent way to do grids...."
    ]
   },
@@ -80,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fov_list = list(range(hdf5_extractor.num_fovs))\n",
+    "fov_list = list(range(0, 80))\n",
     "# fov_list = list(range(16)) + list(range(29,40))"
    ]
   },
@@ -189,8 +188,8 @@
     "    trench_len_y=110,\n",
     "    padding_y=20,\n",
     "    trench_width_x=20,\n",
-    "    t_chunk=10,\n",
-    "    t_range=(0, 20),\n",
+    "    t_chunk=25,\n",
+    "    t_range=(0, 400),\n",
     "    y_percentile=90,\n",
     "    y_min_edge_dist=50,\n",
     "    smoothing_kernel_y=(17, 1),\n",
@@ -220,7 +219,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fov_list = list(range(15)) + list(range(67, 80))"
+    "# fov_list = list(range(15)) + list(range(67,80))\n",
+    "fov_list = list(range(20)) + list(range(60, 80))"
    ]
   },
   {
@@ -413,7 +413,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h5py_handle = h5py.File(\"/n/scratch2/de64/for_sylvia/timelapse/kymo/kymo_15.hdf5\", \"r\")"
+    "h5py_handle = h5py.File(\"/n/scratch2/de64/for_sylvia/timelapse/kymo/kymo_10.hdf5\", \"r\")"
    ]
   },
   {
@@ -431,7 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top = h5py_handle[\"0/channel_Phase\"]"
+    "top = h5py_handle[\"1/channel_Phase\"]"
    ]
   },
   {
@@ -459,7 +459,7 @@
    "outputs": [],
    "source": [
     "# plt.imshow(top[50,:,:,20])\n",
-    "tr.tplot.plot_kymograph(top[10, :, :, 0:500])"
+    "tr.tplot.plot_kymograph(top[10, :, :, 0:20])"
    ]
   },
   {
@@ -701,7 +701,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
